--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -24,6 +24,9 @@
                     <li>
                         <a [routerLink] = "['Contact']">Contact</a>
                     </li>
+                    <li>
+                        <a [routerLink] = "['Admin']">Admin</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
