--- a/app/layout/admin/login.html
+++ b/app/layout/admin/login.html
@@ -14,23 +14,26 @@
 	<div class="page-content container">
 		<div class="row">
 			<div class="col-md-4 col-md-offset-4">
-				<div class="login-wrapper">
-			        <div class="box">
-			            <div class="content-wrap">
-			                <h6>Sign In</h6>
-			                <input class="form-control" type="text" placeholder="User name">
-			                <input class="form-control" type="password" placeholder="Password">
-			                <div class="action">
-			                    <a class="btn btn-primary signup" href="index.html">Login</a>
-			                </div>                
-			            </div>
-			        </div>
+                <form (ngSubmit)="Login()" #loginForm="ngForm">
+                    <div class="login-wrapper">
+                        <div class="box">
+                            <div class="content-wrap">
+                                <h6>Sign In</h6>
+                                <input class="form-control" type="text" placeholder="User name" [(ngModel)]="user.UserName" required >
+                                <input class="form-control" type="password" placeholder="Password" [(ngModel)]="user.Password" required>
+                                <div class="action">
+                                    <button type="submit" class="btn btn-primary signup"
+        [disabled]="!loginForm.form.valid">Submit</button>
+                                </div>                
+                            </div>
+                        </div>
 
-			        <div class="already">
-			            <p>Don't have an account yet?</p>
-			            <a href="signup.html">Sign Up</a>
-			        </div>
-			    </div>
+                        <div class="already">
+                            <p>Don't have an account yet?</p>
+                            <a href="signup.html">Sign Up</a>
+                        </div>
+                    </div>
+                </form>
 			</div>
 		</div>
 	</div>
