--- a/app/layout/admin/admin.header.html
+++ b/app/layout/admin/admin.header.html
@@ -14,8 +14,8 @@
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
                     <ul class="dropdown-menu animated fadeInUp">
-                        <li><a href="profile.html">Profile</a></li>
-                        <li><a href="login.html">Logout</a></li>
+                        <li><a z>Profile</a></li>
+                        <li><a (click)="Logout()">Logout</a></li>
                     </ul>
                     </li>
                 </ul>
