--- a/app/layout/admin/admin.article.html
+++ b/app/layout/admin/admin.article.html
@@ -1,8 +1,9 @@
 <div class="content-box-large">
     <div class="panel-heading">
-        <div class="panel-title">Article</div>
-    </div>
+        <div class="panel-title">Article</div>        
+    </div>    
     <div class="panel-body">
+        <a [routerLink] = "['AdminAddArticle']" class="btn btn-primary">Add new</a>
         <div class="table-responsive">
             <table class="table">
                 <thead>
