--- a/app/layout/admin/admin.header.html
+++ b/app/layout/admin/admin.header.html
@@ -4,7 +4,7 @@
         <div class="col-md-10">
             <!-- Logo -->
             <div class="logo">
-                <h1><a href="index.html">Bootstrap Admin Theme</a></h1>
+                <h1><a href="javascript:void(0)">Blog</a></h1>
             </div>
         </div>
         <div class="col-md-2">
@@ -14,7 +14,7 @@
                     <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">My Account <b class="caret"></b></a>
                     <ul class="dropdown-menu animated fadeInUp">
-                        <li><a z>Profile</a></li>
+                        <li><a href="javascript:void(0)">Profile</a></li>
                         <li><a (click)="Logout()">Logout</a></li>
                     </ul>
                     </li>
