--- a/app/layout/admin/admin.add.article.html
+++ b/app/layout/admin/admin.add.article.html
@@ -32,6 +32,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--<input type="file" (change)="fileChangeEvent($event)" placeholder="Upload file..." />-->
                     <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-primary" [disabled]="!article.Title">Post</button>
